# minimal-linux-disk-cloner

./: CHANGELOG.md  PROJECT_SUMMARY.md  README.md  TODO.md  package.json
packaging/cachyos/: PKGBUILD  build-package.sh  mldc-0.1.2-1-x86_64.pkg.tar.zst
packaging/cachyos/pkg/mldc/: .BUILDINFO  .MTREE  .PKGINFO
packaging/cachyos/src/cargo-home/: .global-cache
packaging/cachyos/src/cargo-home/registry/cache/index.crates.io-1949cf8c6b5b557f/: embed-resource-3.0.8.crate  muda-0.17.2.crate  tao-0.34.8.crate
packaging/cachyos/src/mldc-0.1.0/: AGENTS.md  CHANGELOG.md  README.md  TODO.md  package-lock.json
packaging/cachyos/src/mldc-0.1.0/packaging/linux/: mldc-launcher.sh
packaging/cachyos/src/mldc-0.1.0/src-tauri/: tauri.conf.json
packaging/cachyos/src/mldc-0.1.0/src-tauri/icons/: icon.icns
packaging/cachyos/src/mldc-0.1.0/src-tauri/src/: device.rs  lib.rs  models.rs  warnings.rs
packaging/cachyos/src/mldc-0.1.2/: CHANGELOG.md  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
packaging/cachyos/src/mldc-0.1.2/packaging/cachyos/: PKGBUILD  build-package.sh
packaging/cachyos/src/mldc-0.1.2/packaging/linux/: mldc.desktop
packaging/cachyos/src/mldc-0.1.2/src/: App.tsx  styles.css
packaging/cachyos/src/mldc-0.1.2/src-tauri/: Cargo.toml  tauri.conf.json
packaging/cachyos/src/mldc-0.1.2/src-tauri/capabilities/: default.json
packaging/cachyos/src/mldc-0.1.2/src-tauri/src/: clone.rs  device.rs  fake.rs  warnings.rs
src/: App.tsx  styles.css
src-tauri/: Cargo.toml
src-tauri/src/: clone.rs  main.rs
(+5 files in other folders)
