[package]
name = "mldc-tauri"
version = "0.1.2"
edition = "2024"
description = "Minimal Linux Disk Cloner"
license = "MIT"

[lib]
name = "mldc_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1.1", features = [] }
